# qwen2-vl-api

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml  qwen2_vl.py
.github/workflows/: docker-image.yml
